--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: export PREF=/usr/lib/x86_64-linux-gnu/cmake && cmake -B ${{github.workspace}}/build -DQt5_DIR=$PREF/Qt5 -DQt5Core_DIR=$PREF/Qt5Core -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DCMAKE_TOOLCHAIN_FILE=$ANDROID_SDK_ROOT/ndk-bundle/build/cmake/android.toolchain.cmake -DANDROID_ABI=arm64-v8a -DANDROID_PLATFORM=android-28
+      run: export PREF=/usr/lib/x86_64-linux-gnu/cmake && cmake -B ${{github.workspace}}/build -DQt5_DIR=$PREF/Qt5 -DQt5Core_DIR=$PREF/Qt5Core -DQt5Widgets_DIR=$PREF/Qt5Widgets -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DCMAKE_TOOLCHAIN_FILE=$ANDROID_SDK_ROOT/ndk-bundle/build/cmake/android.toolchain.cmake -DANDROID_ABI=arm64-v8a -DANDROID_PLATFORM=android-28
       env: 
         ANDROID_SDK: $ANDROID_SDK_ROOT
         ANDROID_NDK: $ANDROID_NDK_HOME
