--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -51,7 +51,9 @@ jobs:
             sudo make install
             find $GITHUB_WORKSPACE/qt5 -name "Qt5Core*"
             exit 1
-
+    - name: Show log
+      if: failure()
+      run: find . -name "config.log" | cat
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
