--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -44,7 +44,7 @@ jobs:
 
     - name: Get Qt5 android patches
       run: |
-            mkdir qt5patches $$ cd qt5patches
+            mkdir qt5patches && cd qt5patches
             git init
             git remote add -f origin https://github.com/Martchus/PKGBUILDs
             git config core.sparsecheckout true
