--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -62,7 +62,7 @@ jobs:
             patch -Np1 -i "../../qt5patches/qt5/android-aarch64/0001-Disable-mapboxgl.patch"
             cd ..
             mkdir build-qt && cd build-qt
-            gl4es_BINARY_DIR=$GITHUB_WORKSPACE/gl4es/libs/arm64-v8a LDFLAGS=-L$ANDROID_NDK_HOME/toolchains/llvm/prebuilt/linux-x86_64/sysroot/usr/lib/aarch64-linux-android/28 ../configure -opensource -xplatform android-clang -extprefix $GITHUB_WORKSPACE/qt5out -disable-rpath -nomake tests -nomake examples -android-ndk $ANDROID_NDK_HOME -android-sdk $ANDROID_SDK_ROOT -android-arch arm64-v8a -android-ndk-platform 28 -no-warnings-are-errors -skip qtserialport -no-warnings-are-errors -optimized-qmake -opengl desktop -sysroot $ANDROID_NDK_HOME/toolchains/llvm/prebuilt/linux-x86_64/sysroot
+            ../configure gl4es_BINARY_DIR="$GITHUB_WORKSPACE/gl4es/libs/arm64-v8a" LDFLAGS="-L$ANDROID_NDK_HOME/toolchains/llvm/prebuilt/linux-x86_64/sysroot/usr/lib/aarch64-linux-android/28" -opensource -xplatform android-clang -extprefix $GITHUB_WORKSPACE/qt5out -disable-rpath -nomake tests -nomake examples -android-ndk $ANDROID_NDK_HOME -android-sdk $ANDROID_SDK_ROOT -android-arch arm64-v8a -android-ndk-platform 28 -no-warnings-are-errors -skip qtserialport -no-warnings-are-errors -optimized-qmake -opengl desktop -sysroot $ANDROID_NDK_HOME/toolchains/llvm/prebuilt/linux-x86_64/sysroot
             make -j$(nproc)
             sudo make install
             find $GITHUB_WORKSPACE/qt -name "*.cmake"
