--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -42,34 +42,18 @@ jobs:
             git checkout v5.13.1
             git submodule update --init --recursive
 
-    - name: Get Qt5 android patches
-      run: |
-            mkdir qt5patches && cd qt5patches
-            git init
-            git remote add -f origin https://github.com/Martchus/PKGBUILDs
-            git config core.sparsecheckout true
-            echo qt5/ >> .git/info/sparse-checkout
-            git pull origin master
     # todo: multiarch build
     - name: Patch & build Qt5
       run: |
             mkdir qt5out
-            cd qt5/qtbase
-            patch -Np1 -i "../../qt5patches/qt5/android-aarch64/0001-Fix-clang-libc-build-under-Android.patch"
-            patch -Np1 -i "../../qt5patches/qt5/android-aarch64/0003-Support-pkg-config-under-Android.patch"
-            patch -Np1 -i "../../qt5patches/qt5/android-aarch64/0004-Use-pkg-config-to-find-libjpeg.patch"
-            cd ../qtlocation
-            patch -Np1 -i "../../qt5patches/qt5/android-aarch64/0001-Disable-mapboxgl.patch"
-            cd ..
+            cd qt5
             mkdir build-qt && cd build-qt
-            export QMAKE_LFLAGS="-L$ANDROID_NDK_HOME/toolchains/llvm/prebuilt/linux-x86_64/sysroot/usr/lib/aarch64-linux-android/28"
-            export QMAKE_LIBDIR_OPENGL="$GITHUB_WORKSPACE/gl4es/libs/arm64-v8a"
-            export QMAKE_LIBS_OPENGL="-lGL"
-            ../configure -opensource -xplatform android-clang -extprefix $GITHUB_WORKSPACE/qt5out -disable-rpath -nomake tests -nomake examples -android-ndk $ANDROID_NDK_HOME -android-sdk $ANDROID_SDK_ROOT -android-arch arm64-v8a -android-ndk-platform 28 -no-warnings-are-errors -skip qtserialport -no-warnings-are-errors -optimized-qmake -opengl desktop -sysroot $ANDROID_NDK_HOME/toolchains/llvm/prebuilt/linux-x86_64/sysroot
+            ../configure -opensource -confirm-license -xplatform android-clang -extprefix $GITHUB_WORKSPACE/qt5out -nomake tests -nomake examples -android-ndk $ANDROID_NDK_HOME -android-sdk $ANDROID_SDK_ROOT -android-abis arm64-v8a -android-ndk-platform 28
             make -j$(nproc)
             sudo make install
             find $GITHUB_WORKSPACE/qt -name "*.cmake"
             exit 1
+
     - name: Show Qt5 log
       if: failure()
       run: cat qt5/build-qt/config.log
